--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="My personal site"
     />
-    <meta property="og:image" content=”%PUBLIC_URL%/mackinaw_sunset_1.jpg” />
+    <meta property="og:image" content="%PUBLIC_URL%/mackinaw_sunset_1.jpg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
